fix overlappnig toolbar bug

--- a/src/components/QueryInput/QueryInput.scss
+++ b/src/components/QueryInput/QueryInput.scss
@@ -202,6 +202,7 @@
   &.expanded {
     height: 300px;
     max-height: 300px;
+    z-index: 999999;
   }
 
   .query-suggestions-main-close {
